complete import xlsx locator support
